--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ tokio-io = "0.1.2"
 futures = "0.1.17"
 
 [dev-dependencies]
-partial-io = { version = "0.2.5", features = ["quickcheck", "tokio"] }
 quickcheck = "0.4.1"
+void = "1.0.2"
+rand = "0.3.18"
