--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ license = "AGPL-3.0"
 repository = "https://github.com/AljoschaMeyer/async-ringbuffer"
 
 [dependencies]
-futures-core = "0.2.0-alpha"
-futures-io = "0.2.0-alpha"
+futures-core = "0.2.0-beta"
+futures-io = "0.2.0-beta"
 
 [dev-dependencies]
-futures = "0.2.0-alpha"
+futures = "0.2.0-beta"
